--- a/templates/dhcpd.conf-header.erb
+++ b/templates/dhcpd.conf-header.erb
@@ -6,6 +6,9 @@ authoritative;
 default-lease-time <%= default_lease_time %>;
 max-lease-time <%= max_lease_time %>;
 log-facility <%= logfacility %>;
+<% if omapi_port != "NONE -%>
+omapi-port <%= omapi_port %>;
+<% end -%>
 
 # ----------
 # Options
